# vcpkg-clang

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.devcontainer/clang-build/: .bashrc  Dockerfile  devcontainer.json
.devcontainer/gcc-build/: .bashrc  Dockerfile  devcontainer.json
docs/: rhel8.md
src/: main.cpp
tools/cmake/: compiler_flags.cmake
tools/vcpkg/toolchain/: clang-16.cmake
tools/vcpkg/triplets/: x64-linux-clang16-dynamic.cmake  x64-linux-clang16.cmake
